{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 12,
  "lineage": "ff718889-b229-0bde-7b3d-6b26dbf371ee",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "nat-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.205.225.89",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-05-16T07:19:10.875-07:00",
            "id": "projects/fleet-anagram-350004/regions/europe-west1/addresses/one-nap-ip",
            "name": "one-nap-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "fleet-anagram-350004",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fleet-anagram-350004/regions/europe-west1/addresses/one-nap-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-05-16T07:19:32.101-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fleet-anagram-350004/global/firewalls/one-fw-allow-http",
            "log_config": [],
            "name": "one-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/fleet-anagram-350004/global/networks/one-vpc",
            "priority": 1000,
            "project": "fleet-anagram-350004",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fleet-anagram-350004/global/firewalls/one-fw-allow-http",
            "source_ranges": [
              "0.0.0.0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-05-16T07:19:32.055-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fleet-anagram-350004/global/firewalls/one-fw-allow-https",
            "log_config": [],
            "name": "one-fw-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/fleet-anagram-350004/global/networks/one-vpc",
            "priority": 1000,
            "project": "fleet-anagram-350004",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fleet-anagram-350004/global/firewalls/one-fw-allow-https",
            "source_ranges": [
              "0.0.0.0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "https"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-05-16T07:19:32.183-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fleet-anagram-350004/global/firewalls/one-fw-allow-rdp",
            "log_config": [],
            "name": "one-fw-allow-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/fleet-anagram-350004/global/networks/one-vpc",
            "priority": 1000,
            "project": "fleet-anagram-350004",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fleet-anagram-350004/global/firewalls/one-fw-allow-rdp",
            "source_ranges": [
              "0.0.0.0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "rdp"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-05-16T07:19:32.207-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fleet-anagram-350004/global/firewalls/one-fw-allow-ssh",
            "log_config": [],
            "name": "one-fw-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/fleet-anagram-350004/global/networks/one-vpc",
            "priority": 1000,
            "project": "fleet-anagram-350004",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fleet-anagram-350004/global/firewalls/one-fw-allow-ssh",
            "source_ranges": [
              "0.0.0.0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "web_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20220406",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/fleet-anagram-350004/zones/europe-west1-b/disks/one-vm1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "hostname": "one-vm1.two",
            "id": "projects/fleet-anagram-350004/zones/europe-west1-b/instances/one-vm1",
            "instance_id": "3551382282670433122",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "A8r_1hGa_78=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install -yq build-essential apache2",
            "name": "one-vm1",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/fleet-anagram-350004/global/networks/one-vpc",
                "network_ip": "10.10.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/fleet-anagram-350004/regions/europe-west1/subnetworks/one-private-subnet-1",
                "subnetwork_project": "fleet-anagram-350004"
              }
            ],
            "project": "fleet-anagram-350004",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/fleet-anagram-350004/zones/europe-west1-b/instances/one-vm1",
            "tags": [
              "http",
              "ssh"
            ],
            "tags_fingerprint": "7XLBdwIeS7E=",
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.private_subnet_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "web_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20220406",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/fleet-anagram-350004/zones/europe-west1-b/disks/one-vm2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "hostname": "one-vm2.two",
            "id": "projects/fleet-anagram-350004/zones/europe-west1-b/instances/one-vm2",
            "instance_id": "560903812683916130",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "A8r_1hGa_78=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install -yq build-essential apache2",
            "name": "one-vm2",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/fleet-anagram-350004/global/networks/one-vpc",
                "network_ip": "10.10.1.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/fleet-anagram-350004/regions/europe-west1/subnetworks/one-private-subnet-1",
                "subnetwork_project": "fleet-anagram-350004"
              }
            ],
            "project": "fleet-anagram-350004",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/fleet-anagram-350004/zones/europe-west1-b/instances/one-vm2",
            "tags": [
              "http",
              "ssh"
            ],
            "tags_fingerprint": "7XLBdwIeS7E=",
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.private_subnet_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/fleet-anagram-350004/global/networks/one-vpc",
            "mtu": 0,
            "name": "one-vpc",
            "project": "fleet-anagram-350004",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fleet-anagram-350004/global/networks/one-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat-router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-05-16T07:19:32.338-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/fleet-anagram-350004/regions/europe-west1/routers/one-nat-router",
            "name": "one-nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/fleet-anagram-350004/global/networks/one-vpc",
            "project": "fleet-anagram-350004",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fleet-anagram-350004/regions/europe-west1/routers/one-nat-router"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "fleet-anagram-350004/europe-west1/one-nat-router/one-nat-gateway",
            "min_ports_per_vm": 0,
            "name": "one-nat-gateway",
            "nat_ip_allocate_option": "MANUAL_ONLY",
            "nat_ips": [
              "https://www.googleapis.com/compute/v1/projects/fleet-anagram-350004/regions/europe-west1/addresses/one-nap-ip"
            ],
            "project": "fleet-anagram-350004",
            "router": "one-nat-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_address.nat-ip",
            "google_compute_network.vpc",
            "google_compute_router.nat-router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-05-16T07:19:33.123-07:00",
            "gateway_address": "10.10.1.1",
            "id": "projects/fleet-anagram-350004/regions/europe-west1/subnetworks/one-private-subnet-1",
            "ip_cidr_range": "10.10.1.0/24",
            "name": "one-private-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/fleet-anagram-350004/global/networks/one-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "fleet-anagram-350004",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fleet-anagram-350004/regions/europe-west1/subnetworks/one-private-subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}